add create file, get file data and download with some code refactoring
